* Added overflow: auto to image gallery descriptions. Better than without; see bug 3770

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -1327,6 +1327,7 @@ div.gallerybox div.thumb {
 }
 
 div.gallerytext {
+	overflow: auto;
 	font-size: 94%;
 	padding: 2px 4px;
 }
